[gd_scene load_steps=8 format=3 uid="uid://cufxklrq3t3fi"]

[ext_resource type="Script" uid="uid://yxodqwglkch0" path="res://scripts/environment/scene_changer.gd" id="1_6xg6a"]
[ext_resource type="Texture2D" uid="uid://byxw314akqfgw" path="res://assets/level/doors/Portão de início Sem contorno.png" id="2_r0gix"]
[ext_resource type="Texture2D" uid="uid://cm3ybd33hjq56" path="res://assets/ui/buttons.png" id="3_j363m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o7bb7"]
atlas = ExtResource("3_j363m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh8wg"]
atlas = ExtResource("3_j363m")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cwmp2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7bb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh8wg")
}],
"loop": true,
"name": &"Pressing Key",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0gix"]
size = Vector2(30, 32)

[node name="SceneChanger" type="Area2D"]
collision_mask = 2
script = ExtResource("1_6xg6a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_r0gix")

[node name="ClickHint" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -42)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_cwmp2")
animation = &"Pressing Key"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_r0gix")
debug_color = Color(0.83209014, 0.83939457, 3.85046e-07, 0.43137255)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
